--- a/indexstyle.css
+++ b/indexstyle.css
@@ -6,10 +6,10 @@
 .container{
 	width: 100%;
 	height: 100%;
-	margin: 1px;
+	margin: 1px auto;
 }
 .header{
-	min-width: 1050px;
+	min-width: 100%;
 	background: linear-gradient(to right, #00a1e3, #00a7e7);
 	margin-top: 0.1%;
 	display: inline-block;
