Structural Changes updated

--- a/CSS/Sections.css
+++ b/CSS/Sections.css
@@ -1,9 +1,15 @@
-/* SECTION IMAGES AND TEXT */
-.secBImages{
-  padding: 0 100px 100px 100px;
+/* CONTAINER */
+.VideoPlayerAndInfoContainer{
+  margin: 75px auto;
 }
 
-.secBImgTag{
+/* MANTHAN SECTION CONTAINER, IMAGES AND TEXT*/
+.ManthanSectionContainer{
+  margin: 30px 10%;
+  width: auto;
+}
+
+.ManthanSectionImgTag{
   max-height: 40vh;
 }
 
@@ -11,4 +17,20 @@
   font-size: 30px;
   text-align: center;
   color: #134e7d;
+}
+
+/* VIDEO PLAYER TEXT */
+.videoPlayerText{
+  padding-left: 30px;
+}
+
+.videoPlayerH1{
+  color: #2d3246;
+  text-align: center;
+}
+
+/* VIDEO PLAYER */
+video {
+  width: 100%;
+  height: auto;
 }
