--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,92 +1,220 @@
 /* HEADER */
-.header{
-  padding: 30px;
+.header {
+  padding: 10px;
   margin: 0;
   background-color: #DCDCDC;
 }
 
-.header-text{
+.header-text {
   padding-top: 30px;
 }
 
-.header-para{
+.header-para {
   font-size: 25px;
   color: #134e7d;
 }
 
-.header-h1{
+.header-h1 {
   font-size: 50px;
   color: #134e7d;
 }
 
 /* NAVBAR */
-
-.navbar-header-link{
+.navbar-header-link {
   color: grey;
 }
 
-/* CAROUSEl */
-
-.Carousel-container{
-  width: 50%;
-  min-height: 75vh;
+.navbarContainerFluid {
+  padding: 0;
 }
 
-.Carousel-h2{
+.navbarContainer {
+  width: 100%;
+  margin: 0;
+  background-color: #456268;
+}
+
+.navBarItem {
+  padding: 5px 10px;
+}
+
+@media (min-width: 992px) {
+  .dropdown-menu .dropdown-toggle:after {
+    border-top: .3em solid transparent;
+    border-right: 0;
+    border-bottom: .3em solid transparent;
+    border-left: .3em solid;
+  }
+
+  .dropdown-menu .dropdown-menu {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .dropdown-menu li {
+    position: relative;
+  }
+
+  .nav-item .submenu {
+    display: none;
+    position: absolute;
+    left: 100%;
+    top: -7px;
+  }
+
+  .nav-item .submenu-left {
+    right: 100%;
+    left: auto;
+  }
+
+  .dropdown-menu>li:hover {
+    background-color: #f1f1f1
+  }
+
+  .dropdown-menu>li:hover>.submenu {
+    display: block;
+  }
+}
+#timings,#recommend,#resource-person,#certifiedCourse,
+#newarrivals,#exams,#staffPublications{
+  min-width: 258.2px;
+  min-height: 198px;
+  border-width: 1px;
+  border-style: solid;
   text-align: center;
+}
+#left-pane,#right-pane{
+  margin: 2% 2%;
+}
+/* CAROUSEl */
+.Carousel-container {
+  width: 50%;
+  height: 80vh;
+  margin-bottom: 40px;
+}
+
+.Carousel-h2 {
+  text-align: center;
+}
+
+/* CONTENT CONTAINER */
+.totalLibraryContent {
+  background-color: #86aba1;
+}
+
+.totalLibraryContent2 {
+  background-color: white;
+}
+
+.libraryContent {
+  border: 3px solid #d0e8f2;
+  margin-left: 20%;
+  width: auto;
+  margin-right: 20%;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+.libraryContent2 {
+  border: 3px solid #4e8d7c;
+  margin-left: 20%;
+  width: auto;
+  margin-right: 20%;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+.contentText {
+  font-size: 20px;
 }
 
 /* FOOTER */
 .context-dark, .bg-gray-dark, .bg-primary {
-    color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .footer-classic a, .footer-classic a:focus, .footer-classic a:active {
-    color: #ffffff;
+  color: #ffffff;
 }
+
 .nav-list li {
-    padding-top: 5px;
-    padding-bottom: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .nav-list li a:hover:before {
-    margin-left: 0;
-    opacity: 1;
-    visibility: visible;
+  margin-left: 0;
+  opacity: 1;
+  visibility: visible;
 }
 
 ul, ol {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .social-inner {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    padding: 23px;
-    font: 900 13px/1 "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    text-transform: uppercase;
-    color: rgba(255, 255, 255, 0.5);
-}
-.social-container .col {
-    border: 1px solid rgba(255, 255, 255, 0.1);
-}
-.nav-list li a:before {
-    content: "\f14f";
-    font: 400 21px/1 "Material Design Icons";
-    color: #4d6de6;
-    display: inline-block;
-    vertical-align: baseline;
-    margin-left: -28px;
-    margin-right: 7px;
-    opacity: 0;
-    visibility: hidden;
-    transition: .22s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 23px;
+  font: 900 13px/1 "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  text-transform: uppercase;
+  color: rgba(255, 255, 255, 0.5);
 }
 
-.footersec{
+.social-container .col {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.nav-list li a:before {
+  content: "\f14f";
+  font: 400 21px/1 "Material Design Icons";
+  color: #2d3246;
+  display: inline-block;
+  vertical-align: baseline;
+  margin-left: -28px;
+  margin-right: 7px;
+  opacity: 0;
+  visibility: hidden;
+  transition: .22s ease;
+}
+
+.footersec {
   padding-top: 30px;
+}
+
+/* SERVICES AND FACILITIES LIST */
+.serviceAndFacilitiesContainer{
+  border: 3px solid black;
+  margin: 30px 20% 30px 20%;
+  width: auto;
+}
+
+.serviceAndFacilitiesItems{
+  /* border-style: dotted; */
+  border: 3px solid black;
+  background-color: #86aba1;
+}
+
+.ULSublist{
+  border: 3px dotted black;
+}
+
+.serviceAndFacilitiesItemsSublist{
+  /* border: 2px solid black; */
+  margin: 30px 40% 30px 5%;
+  width: auto;
+}
+
+.ulNoBottomMargin{
+  margin-bottom: 0;
+}
+
+/* TIMING PAGE TABLE */
+.timingTableContainer {
+  margin: 50px 30% 50px;
+  width: auto;
 }
