--- a/CSS/tabStyle.css
+++ b/CSS/tabStyle.css
@@ -97,7 +97,7 @@ ul.tabs li a.active {
 
 #content {
   width: 100%;
-  height: 550px;
+  height: 90%;
   margin: 0 auto;
   background: #545f60;
   padding: 0;
