--- a/CSS/style.css
+++ b/CSS/style.css
@@ -342,13 +342,13 @@ body {
   .nav-list li a:before {
     /*content: "\f14f";*/
     font: 400 21px/1 "Material Design Icons";
-    color: #2d3246;
+    color: #ffffff;
     /*display: inline-block;*/
     vertical-align: baseline;
     margin-left: -28px;
     margin-right: 7px;
     opacity: 0;
-    visibility: hidden;
+    visibility: visible;
     transition: 0.22s ease;
   }
 
